@@ -1,3 +1,7 @@
+2005-01-24  Andrew Cagney  <cagney@gnu.org>
+
+	* gettext.m4: Only fall back to ../intl/ when it's present.
+
 2005-01-17  Kelley Cook  <kcook@gcc.gnu.org>
 
 	* install-sh, config.sub: Import from upstream.
